--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "stripe": "^8.154.0"
   },
   "devDependencies": {
